<resources>
    <string name="app_name">AirA01a</string>
    <string name="app_name2">AirA01a</string>
    <string name="icon">icon</string>
    <string name="blank"> </string>
    <string name="sdk_version">SDK VERSION :</string>
    <string name="action_info">info</string>
    <string name="action_refresh">refresh</string>
    <string name="action_download">download</string>
    <string name="action_download_movie">download</string>
    <string name="action_download_original_movie">Original Size</string>
    <string name="action_get_information">picture information</string>
    <string name="action_download_original_size">Original Size</string>
    <string name="action_download_2048x1536">2048 x 1536</string>
    <string name="action_download_1920x1440">1920 x 1440</string>
    <string name="action_download_1600x1200">1600 x 1200</string>
    <string name="action_download_1024x768">1024 x 768</string>
    <string name="action_download_raw">RAW</string>
    <string name="action_delete_picture">Delete</string>
    <string name="action_delete_movie">Delete</string>
    <string name="connect_check_wifi">check WIFI</string>
    <string name="connect_connect">connecting</string>
    <string name="connect_connected">connected</string>
    <string name="connect_prepare">prepare</string>
    <string name="connect_change_run_mode">changeRunMode</string>
    <string name="connect_restore_camera_settings">restoreCameraSettings</string>
    <string name="pref_cat_camera">CAMERA</string>
    <string name="pref_cat_info">INFORMATION</string>
    <string name="pref_cat_feature">FEATURES</string>
    <string name="pref_cat_camera_off">POWER OFF</string>
    <string name="pref_live_view_quality">Live View Quality</string>
    <string name="pref_touch_shutter">Touch Shutter</string>
    <string name="pref_show_preview">Show Preview</string>
    <string name="pref_shooting_velocity">Continuous Shooting Velocity</string>
    <string name="pref_image_size">Image Size</string>
    <string name="pref_compressibility_ratio">Compressibility Ratio</string>
    <string name="pref_take_raw">RAW</string>
    <string name="pref_disconnect">Disconnect to Camera</string>
    <string name="pref_power_off">Camera Power off</string>
    <string name="pref_exit_power_off">Power off and Exit</string>
    <string name="pref_camera_sound_volume">Sound Volume Level</string>
    <string name="pref_full_time_af">Full Time AF</string>
    <string name="pref_af_face_scan">Face Scan AF</string>
    <string name="pref_lens_status">Lens Status</string>
    <string name="pref_media_status">Media Status</string>
    <string name="pref_focal_length">Focal length</string>
    <string name="pref_camera_version">Camera Version</string>
    <string name="pref_camerakit_version">CameraKit Version</string>
    <string name="pref_art_filter">Art Filter Settings</string>
    <string name="pref_picture_mode">Color Tone Settings</string>
    <string name="pref_recently_art_filter">Art Filter Selection</string>
    <string name="pref_wb_denkyu_colored_leaving">WB AUTO Keeping Warm Colors</string>
    <string name="pref_cat_art_filter_bracketing">Art Filter Bracketing</string>
    <string name="bkt_pict_popart">Pop Art</string>
    <string name="bkt_pict_fantasic_focus">Soft Focus</string>
    <string name="bkt_pict_daydream">Pale &amp; Light Color</string>
    <string name="bkt_pict_light_tone">Light Tone</string>
    <string name="bkt_pict_rough_monochrome">Grainy Film</string>
    <string name="bkt_pict_toy_photo">Pin Hole</string>
    <string name="bkt_pict_miniature">Diorama</string>
    <string name="bkt_pict_cross_process">Cross Process</string>
    <string name="bkt_pict_gentle_sepia">Gentle Sepia</string>
    <string name="bkt_pict_dramatic_tone">Dramatic Tone</string>
    <string name="bkt_pict_ligne_clair">Key Line</string>
    <string name="bkt_pict_pastel">Watercolor</string>
    <string name="bkt_pict_vintage">Vintage</string>
    <string name="bkt_pict_partcolor">Partial Color</string>
    <string name="dialog_start_wait_title">Please Wait</string>
    <string name="dialog_start_wait_message">Prepairing&#8230;</string>
    <string name="dialog_start_load_property_title">Setting Properties&#8230;</string>
    <string name="dialog_start_load_property_message">Please Wait</string>
    <string name="dialog_start_save_property_title">Storing Properties&#8230;</string>
    <string name="dialog_start_save_property_message">Please Wait</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_message_disconnect">Disconnect OK?</string>
    <string name="dialog_message_power_off">Power off OK?</string>
    <string name="dialog_message_exit_application">Power off and Exit OK?</string>
    <string name="dialog_positive_disconnect">Disconnect</string>
    <string name="dialog_positive_power_off">Power Off</string>
    <string name="dialog_positive_exit_application">Exit</string>
    <string name="dialog_positive_execute">OK</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="shutter_control_record_failed">Record failed</string>
    <string name="shutter_control_take_failed">Take failed</string>
    <string name="shutter_control_af_failed">AF failed</string>
    <string name="warn_high_temperature">TEMP</string>
    <string name="warn_exposure">WARN</string>
    <string name="dialog_download_file_title">Get File</string>
    <string name="dialog_download_title">Get Image</string>
    <string name="dialog_download_movie_title">Get Movie</string>
    <string name="dialog_download_message">File Name:</string>
    <string name="dialog_get_information_title">Getting Picture Information</string>
    <string name="download_control_download_failed">Download failed</string>
    <string name="download_control_save_failed">Save failed</string>
    <string name="download_control_get_information_failed">Get information failed</string>
    <string name="download_control_get_information_title">Information</string>
    <string name="download_control_save_success">Saved</string>
    <string name="exif_datetime_title">Date : </string>
    <string name="exif_exposure_time_title">Exposure Time : </string>
    <string name="exif_aperture_title">Aperture : </string>
    <string name="exif_focal_length_title">Focal Length : </string>
    <string name="exif_focal_35mm_equiv_title">35mm Equiv.</string>
    <string name="exif_iso_title">ISO : </string>
    <string name="exif_maker_title">Maker : </string>
    <string name="exif_camera_title">Model : </string>
    <string name="exif_camera_mode_title">Mode :</string>
    <string name="exif_metering_mode_title">Metering Mode :</string>
    <string name="exif_custom_process_title">(Custom Image Processing)</string>
    <string name="pref_color_tone">Color Tone</string>
    <string name="pref_tone_control_low">Tone Control (Low)</string>
    <string name="pref_tone_control_middle">Tone Control (Middle)</string>
    <string name="pref_tone_control_high">Tone Control (High)</string>
    <string name="pref_monotone">Monotone Preferences</string>
    <string name="pref_monotonefilter_monochrome">Monotone Filter (Monochrome)</string>
    <string name="pref_monotonefilter_rough_monochrome">Monotone Filter (Rough Monochrome)</string>
    <string name="pref_monotonefilter_dramatic_tone">Monotone Filter (Dramatic Tone)</string>
    <string name="pref_monotonecolor_monochrome">Monotone Color (Monochrome)</string>
    <string name="pref_monotonecolor_rough_monochrome">Monotone Color (Rough Monochrome)</string>
    <string name="pref_monotonecolor_dramatic_tone">Monotone Color (Dramatic Tone)</string>
    <string name="pref_color_creator">Color Creator Settings</string>
    <string name="pref_color_creator_color">Color Creator Color</string>
    <string name="pref_color_creator_vivid">Color Creator Vivid</string>
    <string name="pref_effect">Picture Effect</string>
    <string name="pref_tone_control">Tone Control</string>
    <string name="pref_auto_bracketing">Auto Bracketing</string>
    <string name="pref_bracketing_count">Auto Bracketing Count</string>
    <string name="pref_custom_wb_selection">Custom WB : Color Temperature</string>
    <string name="pref_part_color_phase">Part Color Phase</string>
    <string name="pref_part_color_settings">Part Color Settings</string>
    <string name="pref_white_balance_settings">White Balance Settings</string>
    <string name="pref_auto_focus_settings">AF Settings</string>
    <string name="pref_frame_grid">Grid Line</string>
    <string name="pref_share_after_receive">Share After Save</string>
    <string name="pref_live_view_magnify">Live View Magnify Setting</string>
    <string name="shoot_bracketing">BKT</string>
    <string name="show_panel">Show</string>
    <string name="hide_panel">Hide</string>
    <string name="button_retry">Retry</string>
    <string name="button_wifi_settings">WiFi Settings</string>
    <string name="button_exit_application">Exit Application</string>
    <string name="title_my_settings">Favorite Camera Properties</string>
    <string name="title_fatal_error">Fatal Error</string>
    <string name="title_failed">Connect failed</string>
    <string name="title_tab_title_load">Load</string>
    <string name="title_tab_title_save">Save</string>
    <string name="fatal_cannot_use_camera">The CameraKit SDK can not work because the running mode of camera is UNKNOWN.   So please turn off the camera power once.</string>
    <string name="title_connect_failed">Connect failed</string>
    <string name="configuration">Configuration</string>
    <string name="restore">Restore</string>
    <string name="save_props">Save</string>
    <string name="hint_save_props">Label</string>
    <string name="auto_save_props">Auto Saved Property</string>
    <string name="restored_my_props">Restored Property : </string>
    <string name="saved_my_props">Saved Property : </string>
    <string name="exif_with_gps">(with Geolocation)</string>
    <string name="pref_cat_gokigen">GOKIGEN</string>
    <string name="pref_instruction_manual">AirA01a Instructions</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="pref_level_gauge">Level Gauge</string>
    <string name="pref_capture_live_view">Capture live view</string>
    <string name="data_saving">Capture</string>
    <string name="pref_bluetooth">Bluetooth Smart Settings</string>
    <string name="hint_save_bt_name">Name</string>
    <string name="hint_save_bt_passcode">Passcode</string>
    <string name="pref_air_bt">Olympus Air Settings</string>
    <string name="pref_summary_air_bt">Entry your Olympus Air</string>
    <string name="saved_my_camera">Registerd : </string>
    <string name="launch_fail_via_ble">  Launch fail. via BLE : </string>
    <string name="ble_setting_is_off">Bluetooth is currently off.</string>
    <string name="pref_bluetooth_power_on">Bt Power On</string>
    <string name="pref_summary_bluetooth_power_on">Camera Power on via Bluetooth Smart</string>
    <string name="action_select_all">Select/Deselect All</string>
    <string name="action_download_with_raw">Download with RAW</string>
    <string name="button">Button</string>
    <string name="select_radio_date">Date</string>
    <string name="select_radio_path">Path</string>
    <string name="dialog_title_batch_download">Batch Download(select size)</string>
    <string name="dialog_positive_download">Download</string>
    <string name="dialog_label_batch_download">Selected : </string>
    <string name="dialog_label_select_size"> </string>
    <string name="message_download_finished_pics">Finished. Number of Pics. : </string>
    <string name="comfirm_batch_delete_message">  Delete selected file(s).</string>
    <string name="action_delete_with_raw">Delete with RAW File</string>
    <string name="action_delete_only_raw">Delete ONLY RAW File</string>
    <string name="pref_self_timer_seconds">Self timer Seconds.</string>
</resources>