<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:compat="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_refresh"
        compat:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/action_refresh"
        android:visible="false" />

    <item
        android:id="@+id/action_select_all"
        compat:showAsAction="ifRoom"
        android:icon="@drawable/ic_select_all_grey_24dp"
        android:title="@string/action_select_all"
        android:visible="true" />

    <item
        android:id="@+id/action_info"
        compat:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_info"
        android:visible="true" />

</menu>
